Colaboratory를 통해 생성됨

--- a/hg_9_2.ipynb
+++ b/hg_9_2.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "hg-9-2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMp3zYfcoD8TdKbfoiS7eEz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LaonMoon/RNN-STUDY/blob/master/hg_9_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -644,33 +656,6 @@
           "metadata": {
             "needs_background": "light"
           }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git remote add origin https://github.com/LaonMoon/RNN-STUDY.git\n",
-        "!git branch -M master\n",
-        "!git push -u origin master"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ClA0iSU6xZSk",
-        "outputId": "734df623-6944-4a70-b404-0339abd1e082"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n",
-            "fatal: not a git repository (or any of the parent directories): .git\n"
-          ]
         }
       ]
     }
